--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "file-saver": "^2.0.5",
     "p5-svelte": "latest",
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelte-fullscreen": "^2.0.0"
   }
 }
